Merge branch 'back' of https://github.com/TripleSky1564/Cloud_Bridge into back
# Conflicts:
#	.gradle/8.14.3/fileHashes/fileHashes.lock
#	.idea/workspace.xml